test/typeerrors/Examples/TooGenTyped.hs
module TooGenTyped where

test x = (\y -> [x,y]) :: a -> [a]
